--- a/Portfolio_Automation.ipynb
+++ b/Portfolio_Automation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,10 @@
     "from selenium.webdriver.common.keys import Keys\n",
     "import getpass\n",
     "import time\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from IPython.display import clear_output\n",
+    "def clear():\n",
+    "    return clear_output(wait=True)"
    ]
   },
   {
@@ -29,11 +32,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Portfolio relevant data has been collected\n",
+      "\n",
+      "\n",
+      "                  EXIMBANK          GP  HEIDELBCEM  LANKABAFIN  SUMITPOWER\n",
+      "P/E Ratio         5.450000    9.170000    9.580000   15.180000    7.380000\n",
+      "Beta              0.830000    0.960000    0.960000    1.380000    0.700000\n",
+      "EPS               1.650000   26.040001   14.330000    0.850000    4.780000\n",
+      "Price-to-book     2.200000    0.130000    0.600000    1.480000    0.920000\n",
+      "Dividend Yield    8.470000    4.220000    2.240000    6.790000    8.390000\n",
+      "Position(BDT)   143.000000  489.000000  147.000000   22.000000   45.000000\n",
+      "Company Weight    0.169031    0.578014    0.173759    0.026005    0.053191\n",
+      "\n",
+      "The current portfolio beta is 0.935\n",
+      "Current portfolio is at a lower volatility compared to market. The portfolio is at a lower risk compared to the market.\n"
+     ]
+    }
+   ],
    "source": [
     "##LOADING USER PORTFOLIO DATA\n",
     "\n",
@@ -63,6 +87,7 @@
     "third_login.send_keys(two_fa)\n",
     "driver.implicitly_wait(7)\n",
     "driver.find_element_by_id(\"_xcologin_confirm_otp\").click()\n",
+    "clear()\n",
     "\n",
     "#extracting portfolio information\n",
     "time.sleep(3)\n",
@@ -110,7 +135,7 @@
     "for company in full_portfolio:\n",
     "    driver = webdriver.Chrome(\"C:/Projects/chromedriver_win32/chromedriver.exe\")\n",
     "    driver.get('https://www.amarstock.com/stock/%s'% company)\n",
-    "    time.sleep(1)\n",
+    "    time.sleep(3)\n",
     "    pe_ratio = driver.find_element_by_xpath(\"/html/body/section[1]/div/div[2]/div[1]/div/div[3]\") \n",
     "    beta = driver.find_element_by_xpath(\"/html/body/section[1]/div/div[2]/div[5]/div/div[3]\")\n",
     "    eps = driver.find_element_by_xpath(\"/html/body/section[1]/div/div[2]/div[2]/div/div[3]\")\n",
@@ -129,67 +154,96 @@
     "sum_df = portfolio_data.sum(axis=1)\n",
     "total_weightage = sum_df [\"Position(BDT)\"]\n",
     "for company in full_portfolio:\n",
-    "    x = (portfolio_data[company][\"Position(BDT)\"])/weightage\n",
+    "    x = (portfolio_data[company][\"Position(BDT)\"])/total_weightage\n",
     "    empty_3.append(x)\n",
     "company_weight = dict(zip(full_portfolio,empty_3))\n",
     "c_weight = pd.DataFrame(company_weight,index=[\"Company Weight\"]) \n",
     "total_data = portfolio_data.append(c_weight)\n",
-    "total_data \n",
+    "\n",
     "\n",
     "#PORTFOLIO BETA COLLECTION\n",
-    "p_beta = 1\n",
+    "p_beta = 0\n",
     "for company in full_portfolio:\n",
     "    weight = total_data[company][\"Company Weight\"]\n",
     "    beta = total_data[company][\"Beta\"]\n",
     "    mlt_beta = (weight*beta)\n",
-    "    p_beta*=mlt_beta\n",
-    "print(p_beta)"
+    "    p_beta+=mlt_beta\n",
+    "p_beta = round(p_beta,3)\n",
+    "\n",
+    "#DISPLAYING EVERYTHING\n",
+    "clear()\n",
+    "print(\"Portfolio relevant data has been collected\\n\\n\")\n",
+    "print(total_data) \n",
+    "print(\"\\nThe current portfolio beta is\", p_beta)\n",
+    "if(p_beta>1):\n",
+    "    print(\"Current portfolio is in excess of volatility compared to market. The portfolio is at high risk from market movements. Portfolio revision advised\")\n",
+    "elif(p_beta<1):\n",
+    "    print(\"Current portfolio is at a lower volatility compared to market. The portfolio is at a lower risk compared to the market.\")\n",
+    "else:\n",
+    "    print(\"Current portfolio price activity is strongly correlated with market index. The portfolio volatility mirrors market volatility. Slight Portfolio revision advised\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "data = {}\n",
-    "for company in full_portfolio:\n",
-    "    driver = webdriver.Chrome(\"C:/Projects/chromedriver_win32/chromedriver.exe\")\n",
-    "    driver.get('https://www.amarstock.com/stock/%s'% company)\n",
-    "    time.sleep(1)\n",
-    "    pe_ratio = driver.find_element_by_xpath(\"/html/body/section[1]/div/div[2]/div[1]/div/div[3]\") \n",
-    "    beta = driver.find_element_by_xpath(\"/html/body/section[1]/div/div[2]/div[5]/div/div[3]\")\n",
-    "    eps = driver.find_element_by_xpath(\"/html/body/section[1]/div/div[2]/div[2]/div/div[3]\")\n",
-    "    price_to_book = driver.find_element_by_xpath(\"/html/body/section[1]/div/div[2]/div[3]/div/div[3]\")\n",
-    "    div_yield = driver.find_element_by_xpath(\"/html/body/section[1]/div/div[2]/div[6]/div/div[3]\")\n",
-    "    ratios = [pe_ratio.text,beta.text,eps.text,price_to_book.text,div_yield.text]\n",
-    "    data[company] = ratios\n",
-    "    driver.quit()\n",
-    "df = pd.DataFrame(data, index = [\"P/E Ratio\",\"Beta\",\"EPS\",\"Price-to-book\",\"Dividend Yield\",])\n",
-    "portfolio_data = df.append(df_1)\n",
-    "for company in full_portfolio:\n",
-    "    portfolio_data[company] = pd.to_numeric(portfolio_data[company],downcast=\"float\")\n",
-    "    \n",
-    "#COMPANY WEIGHTAGE CALCULATION\n",
-    "empty_3 = []\n",
-    "sum_df = portfolio_data.sum(axis=1)\n",
-    "total_weightage = sum_df [\"Position(BDT)\"]\n",
-    "for company in full_portfolio:\n",
-    "    x = (portfolio_data[company][\"Position(BDT)\"])/weightage\n",
-    "    empty_3.append(x)\n",
-    "company_weight = dict(zip(full_portfolio,empty_3))\n",
-    "c_weight = pd.DataFrame(company_weight,index=[\"Company Weight\"]) \n",
-    "total_data = portfolio_data.append(c_weight)\n",
-    "total_data "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching portfolio relevant publicly available news from the past 7 days.......\n",
+      "\n",
+      "Trading Code: HEIDELBCEM\n",
+      "Title: HEIDELBCEM: Resumption after record date\n",
+      "News: Trading of the Shares of the Company will resume on 15.06.2020 after record date.\n",
+      "Post Date: 2020-06-14\n",
+      "______________________________________________________________________________\n",
+      "Trading Code: HEIDELBCEM\n",
+      "Title: HEIDELBCEM: Suspension for Record Date\n",
+      "News: Trading of the shares of the Company will remain suspended on record date i.e., 14.06.2020.\n",
+      "Post Date: 2020-06-11\n",
+      "______________________________________________________________________________\n",
+      "Trading Code: LANKABAFIN\n",
+      "Title: LANKABAFIN: Update of Information\n",
+      "News: The Company has requested the shareholders to update their e-mail addresses through their respective Depository Participant (DP). The Company has also requested the shareholders to update their respective BO account with 12 digits e-TIN number, BO account, address, mobile number etc. through their respective DPs before the Record Date.\n",
+      "Post Date: 2020-06-09\n",
+      "______________________________________________________________________________\n",
+      "Trading Code: LANKABAFIN\n",
+      "Title: LANKABAFIN: Dividend Declaration (Additional Information)\n",
+      "News: (Continuation news of LANKABAFIN): ii) Bonus shares are declared out of accumulated profit and iii) Bonus shares are not declared from capital reserve or revaluation reserve or any unrealized gain or out of profit earned prior to incorporation of the Company or through reducing paid up capital or through doing anything so that the post dividend retained earnings become negative or a debit balance. (end)\n",
+      "Post Date: 2020-06-09\n",
+      "______________________________________________________________________________\n",
+      "Trading Code: LANKABAFIN\n",
+      "Title: LANKABAFIN: Dividend Declaration (Additional Information)\n",
+      "News: Dividend Declaration (Additional Information): The Company has further informed that the AGM will be held on September 07, 2020 at 11:00 AM through Digital Platform. The Company also informed that they recommended 5% stock dividend this year due to following reasons: i) Bonus shares have been recommended to strengthen the capital base of the Company to support business growth and to conserve cash to manage any contingency amidst the COVID 19 pandemic. (cont.)\n",
+      "Post Date: 2020-06-09\n",
+      "______________________________________________________________________________\n",
+      "Trading Code: GP\n",
+      "Title: GP: Dividend Disbursement\n",
+      "News: The Company has informed that it has disbursed the cash dividend for the year ended on December 31, 2019 to the respective shareholders.\n",
+      "Post Date: 2020-06-09\n",
+      "______________________________________________________________________________\n",
+      "Trading Code: LANKABAFIN\n",
+      "Title: LANKABAFIN: Q1 Financials\n",
+      "News: (Q1 Un-audited): Consolidated EPS was Tk. 0.14 for January-March 2020 as against Tk. 0.10 for January-March 2019. Consolidated NOCFPS was Tk. 5.92 for January-March 2020 as against Tk. (3.79) for January-March 2019. Consolidated NAV per share was Tk. 18.61 as on March 31, 2020 and Tk. 18.48 as on December 31, 2019.\n",
+      "Post Date: 2020-06-09\n",
+      "______________________________________________________________________________\n",
+      "Trading Code: LANKABAFIN\n",
+      "Title: LANKABAFIN: Price Limit Open\n",
+      "News: There will be no price limit on the trading of the shares of the Company today (09.06.2020) following its corporate declaration, however, as per the BSEC Order No. BSEC/CMRRCD/2001-07/04 dated March 19, 2020, the floor price shall be applicable accordingly.\n",
+      "Post Date: 2020-06-09\n",
+      "______________________________________________________________________________\n",
+      "Trading Code: LANKABAFIN\n",
+      "Title: LANKABAFIN: Dividend Declaration\n",
+      "News: The Board of Directors has recommended 7% cash and 5% stock dividend for the year ended on December 31, 2019. Date of AGM: 07.09.2020, Time and Venue: will be notified later. Record Date: 16.07.2020. The Company has also reported Consolidated EPS of Tk. 0.98, Consolidated NAV per share of Tk. 18.48 and Consolidated NOCFPS of Tk. (2.66) for the year ended on December 31, 2019 as against Tk. 0.85, Tk. 19.14 and Tk. 3.30 respectively for the same period of the previous year.\n",
+      "Post Date: 2020-06-09\n",
+      "______________________________________________________________________________\n",
+      "\n",
+      "Finished fetching relevant news\n"
+     ]
+    }
+   ],
    "source": [
     "#SCRAPING PORTFOLIO RELATED DATA\n",
     "print (\"Fetching portfolio relevant publicly available news from the past 7 days.......\\n\")\n",
@@ -213,6 +267,13 @@
     "driver.quit()                \n",
     "print(\"\\nFinished fetching relevant news\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
