--- a/Portfolio_Automation.ipynb
+++ b/Portfolio_Automation.ipynb
@@ -20,7 +20,13 @@
     "import pandas as pd\n",
     "from IPython.display import clear_output\n",
     "def clear():\n",
-    "    return clear_output(wait=True)"
+    "    return clear_output(wait=True)\n",
+    "from selenium.webdriver import Chrome\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "chrome_options = Options()\n",
+    "chrome_options.add_argument(\"--headless\")\n",
+    "chrome_options.add_argument(\"--window-size=1920x1080\")\n",
+    "path = \"C:/Projects/chromedriver_win32/chromedriver.exe\""
    ]
   },
   {
@@ -60,9 +66,7 @@
    ],
    "source": [
     "##LOADING USER PORTFOLIO DATA\n",
-    "\n",
-    "from selenium.webdriver import Chrome\n",
-    "driver = webdriver.Chrome(\"C:/Projects/chromedriver_win32/chromedriver.exe\")\n",
+    "driver = webdriver.Chrome(options=chrome_options,executable_path = path)\n",
     "driver.get('https://investor.dsetrade.com/Cstfwsrv2012/html/MainHome.aspx')\n",
     "\n",
     "#sending BO ID for the first login page\n",
@@ -133,7 +137,7 @@
     "data = {}\n",
     "print(\"Starting Data Collection. Please Wait!\")\n",
     "for company in full_portfolio:\n",
-    "    driver = webdriver.Chrome(\"C:/Projects/chromedriver_win32/chromedriver.exe\")\n",
+    "    driver = webdriver.Chrome(options=chrome_options,executable_path = path)\n",
     "    driver.get('https://www.amarstock.com/stock/%s'% company)\n",
     "    time.sleep(3)\n",
     "    pe_ratio = driver.find_element_by_xpath(\"/html/body/section[1]/div/div[2]/div[1]/div/div[3]\") \n",
@@ -245,10 +249,10 @@
     }
    ],
    "source": [
-    "#SCRAPING PORTFOLIO RELATED DATA\n",
+    "#SCRAPING PORTFOLIO RELATED NEWS\n",
     "print (\"Fetching portfolio relevant publicly available news from the past 7 days.......\\n\")\n",
     "counter = 0\n",
-    "driver = webdriver.Chrome(\"C:/Projects/chromedriver_win32/chromedriver.exe\")\n",
+    "driver = webdriver.Chrome(options=chrome_options,executable_path = path)\n",
     "driver.get('https://main.dsebd.org/news_archive_7days.php')\n",
     "scrape_ticker = driver.find_elements_by_css_selector('tr')\n",
     "for news in scrape_ticker:\n",
